# sqlite-ext-core

./: Cargo.toml  LICENSE  Makefile  README.md  architecture.md  leaks.md  valgrind.supp
src/: api.rs  ffi.rs  lib.rs  registry.rs  wrappers.rs
tests/integration/rust_extension/: Cargo.toml  leak_check.c
