[package]
name = "sqlite-ext-core"
version = "0.2.0"
edition = "2021"
authors = ["Dilip Vamsi"]
description = "Zero-dependency toolkit for building SQLite loadable extensions in Rust: dynamic API resolution, inline C-mirror wrappers, and a per-database shared-state registry with RAII cleanup."
license = "MIT"
readme = "README.md"
repository = "https://github.com/sqflyer/sqlite-ext-core"
homepage = "https://github.com/sqflyer/sqlite-ext-core"
documentation = "https://docs.rs/sqlite-ext-core"
keywords = ["sqlite", "extension", "ffi", "database", "registry"]
categories = ["database", "api-bindings", "external-ffi-bindings"]

[dependencies]

[dev-dependencies]
# Bundled SQLite C-core for the tests
rusqlite = { version = "0.38", features = ["bundled"] }
# Raw SQLite bindings — only for unit tests; production code resolves
# everything dynamically via `sqlite3_extension_init2`.
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[lib]
crate-type = ["rlib"]
